--- a/virgin/.gitignore
+++ b/virgin/.gitignore
@@ -1,9 +1,8 @@
 HELP.md
 target/
-!.mvn/wrapper/maven-wrapper.jar
-!.mvn/
 !**/src/main/**/target/
 !**/src/test/**/target/
+.mvn/
 
 ### STS ###
 .apt_generated
