--- a/mysql/src/main/resources/application.properties
+++ b/mysql/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=ThePassword
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.jpa.show-sql = true
 userbigname=bob
+
+spring.user.name=alice
+spring.user.address=Washington
